面向、和这些类型的一些函数

--- a/translation/03_第三章.md
+++ b/translation/03_第三章.md
@@ -327,54 +327,55 @@ double pow(double x, double y)
 4. `pre:`告诉了我们在执行函数调用之前应满足哪些要求。
 5. `post:`告诉了我们当一个函数的前置条件被满足之后，它会做哪些事。
 
-In addition to revealing information to programmers, function headings supply information to the compiler to verify the validity of every attempt to call that function. Th e compiler informs you if a function is not called properly. Consider the oor function heading:
-
-
+除了为程序员提供这些信息之外，函数头信息也向编译器提供了用于验证函数调用是否有效的信息。如果相关函数的调用不正确，编译器会根据这些信息来通知我们。譬如我们以`floor`函数的头信息为例：
 
 ```C++
 double floor(double x)
 // post: Returns the largest integer <= x
 ```
 
-The return type is double. Th is means that a double replaces any valid call to oor. Th erefore, the function call can be used wherever a double value is legal—in an arithmetic expression, for instance. Also present is the function name oor—very important information for effectively calling this or any particular function. The parameter list shows one double parameter named x. So the client code must supply exactly one numeric argument to properly call oor. For example, the following is a valid call to double and it is used in a proper spot in the code:
+如你所见，该函数的返回值类型是`double`。这意味着所有`double`对象所在的地方都可以放置一个对`floor`函数的有效调用。因此这个函数调用可以被当作`double`对象来使用——譬如使用在算术表达式中，这是符合语法的。除此之外，函数名`floor`也是一个非常重要的信息，它能帮助我们调用并指定目标函数。最后，参数列表中是一个名为`x`的`double`类型参数，这决定了该函数的调用代码必须提供一个数字参数才能正确地调用`floor`函数。例如，我们在下面的代码中看到的是关于如何将该函数的有效调用赋值给`double`对象的正确示范：
 
 ```C++
 double x;
 x = floor(5.55555); // This assignment is okay
 ```
 
-However, these function calls are invalid:
+但以下这些函数调用就属于无效操作了：
 
 ```C++
 string s;
-s = floor(5.5555); // Error: floor doesn't return a string
+s = floor(5.5555);           // Error: floor doesn't return a string
 cout << floor(1.0, 2.0);     // Error: too many arguments
 cout << floor("wrong type"); // Error: wrong type argument
 cout << floor();             // Error: too few arguments
 ```
 
-**SELF-CHECK**
+**自检题**
 
-3-12 Given the following function heading, write “valid” for each correct function call or explain why it is not valid.
+3-12 请根据给定的函数头信息，写出以下”有效“的正确函数调用，并解释其他调用无效的原因。
 
 ```C++
 double ceil(double x)
 ```
 
-  a. ceil(1.1)        d. ceil("Ceila")
-  b. oor(2.9)         e. ceil -0.1
-  c. ceil(1.2, 3.0)   f. ceil(-3)
+* a. ceil(1.1)
+* b. floor(2.9)
+* c. ceil(1.2, 3.0)
+* d. ceil("Ceila")
+* e. ceil -0.1
+* f. ceil(-3)
 
-3-13 Describe the error in each of the following attempts at function headings:
+3-13 请说明以下函数头信息中各自所犯的错误：
 
-a.  double f ( x )
-b.  int smaller(int n1 int n2)
-c.  toUpper(string s)
-d.  myClass g()
-e.  int twoStrings(string s1, string s2,)
-f.  unknownType initialize(" lename.dat")
+* a. double f ( x )
+* b. int smaller(int n1 int n2)
+* c. toUpper(string s)
+* d. myClass g()
+* e. int twoStrings(string s1, string s2,)
+* f. unknownType initialize(" lename.dat")
 
-Use the following documentation for the questions that follow:
+请根据以下文档回答下面的问题：
 
 ```C++
 double floor(double x)
@@ -383,40 +384,39 @@ double floor(double x)
 // equal to x
 ```
 
-3-14. Write four function calls (with diff erent arguments) that would help explain how oor works to someone who has never seen it before.
+3-14. 请写出四个（参数不相同的）的函数调用，帮助从未见过`floor`函数的人了解该函数是做什么的。
 
-3-15. Write the values returned from each of the four function calls in your answer to the preceding question.
+3-15. 请写出你在上个问题中所写的那四个函数调用返回的值。
 
-### 3.3.3 ARGUMENT / PARAMETER ASSOCIATIONS
+### 3.3.3 实参与形参的关联
 
-A function heading may list zero, one, two, and sometimes more parameters. If there is more than one, the parameters must be separated by commas. Th e next function heading has two parameters—str and x.
+函数头信息中通常会列出0个、一个、两个参数（有时甚至会是多个）。如果参数的个数超过一个，这些参数之间就必须要用逗号来做区隔。例如，下面的函数头信息中列出了两个参数，分别是`str`和`x`。
 
 ```C++
 double twoParameters(string str, double x)
 ```
 
-Exactly one argument of an acceptable class is required for each parameter listed in a function heading. Th erefore, precisely two arguments must be present in every call to twoParameters. The compiler will report an error if you call this particular function with any other number of arguments than two. Additionally, the type and position of the arguments must match the type and position of the parameters. For example, a double argument cannot be associated with a string parameter. Here are some examples of correct calls of twoParameters:
+函数头信息中所列出的每个参数（我们称之为形参）都需要有一个相应类型的实参。因此，我们在调用`twoParameters`函数时必须要提供两个对应的实参，用任何其他数量的实参来调用这个函数都会导致编译器报错。除此之外，实参的类型和位置必须要要和形参的类型和位置一一一对应。例如，`double`类型的实参不能与`string`类型的形参相关联。下面我们来看几个正确调用`twoParameters`函数的示例：
 
-**Valid Calls to the twoParameters Function**
+**几个对于`twoParameters`函数的有效调用：**
 
 ```C++
 twoParameters("abc", 1.2);
 twoParameters("another string", 15);
-twoParameters("\$", 3.4);
+twoParameters("$", 3.4);
 ```
 
-The following attempts to call twoParameters result in compile time
-errors:
+但以下对`twoParameters`函数调用就会导致编译时错误了：
 
-| Error                         | Reason for Error |
-|-------------------------------|------------------|
-| twoParameters("a");           | Needs two arguments. |
-| twoParameters("1.1", "2.2");  | The string “ 2.2 ” can’t be assigned to a double . |
-| twoParameters(1.1, 1.1);      | The number 1.1 can’t be assigned to a string . |
-| twoParameters("a", 2.2, 3.3); | One too many arguments. |
-| twoParameters;                | Generate a warning. Statement has no effect. |
+| 错误调用                          | 导致错误的原因                            |
+|---------------------------------|-----------------------------------------|
+| `twoParameters("a");`           | 该函数需要的是两个实参。                    |
+| `twoParameters("1.1", "2.2");`  | 字符串”2.2“不能被赋值给`double`类型的形参。  |
+| `twoParameters(1.1, 1.1);`      | 数字1.1不能被赋值给`string`类型的形参。      |
+| `twoParameters("a", 2.2, 3.3);` | 实参个数过多。                            |
+| `twoParameters;`                | 产生一个警告，说明该语句无效。               |
 
-Arguments associate with parameters by position—fi rst argument to the first parameter, second argument to the second parameter, and so on. For example, when twoParameters is called, the fi rst parameter is assigned the value of the fi rst argument and the second argument to the function is copied into the second parameter x. When twoParameters is called with arguments "abc" and 1.2, like this:
+实参与形参在位置上是一一对应的，第一个实参对应第一个形参，第二个实参对应第二个形参，以此类推。例如在调用`twoParameters`函数时，它的第一个形参被赋值的是第一个实参的值，而传递给该函数的第二个实参将被拷贝给它的第二个形参`x`。也就是说，当我们用“abc”和1.2这两个实参调用`twoParameters`函数时，情况是这样的：
 
 ```C++
 int twoParameters(string str, double x)
@@ -424,540 +424,419 @@ int twoParameters(string str, double x)
 result4 = twoParameters ("abc", 1.2);
 ```
 
-it’s as if these two assignment operations occur:
+整个过程就像执行了如下两个赋值操作：
 
 ```C++
 str = "abc";
 x = 1.2;
 ```
 
-> Whatever happens inside twoParameters now depends on the values of
-> these two parameters. Th e parameters are used inside the function to
-> produce the return result.
-
-SELF-CHECK
-
-> 3-16 What value is sent to parameter str with twoParameters("1st",
-> 1.2)?
->
-> 3-17 What value is sent to parameter x with twoParameters("2nd", 3.4)?
->
-> Much can be deduced from a function heading when it is accompanied by
-> the function pre- and postconditions. As review, here is the sin
-> function heading complete with pre- and postconditions:
->
-> double sin(double x) // post: Returns the sine of x radians
->
-> Th e following information is ascertained:
-
--   What happens: returns the sine of x radians
-
--   Return type: double
-
--   Function name: sin
-
--   Number of arguments: one
-
--   Type of argument: double (or an expression convertible to double)
-
-> Th e return results can now be determined (with the help of a
-> scientifi c calculator in radian mode).
-
-Function Call Return Result
-
-> sin(3.1415926/2.0) 1.0 sin(1.0) 0.8421 // Approximately sin(3.1415926)
-> 5.35898e-08 // close to 0.0
-
-SELF-CHECK
-
-> 3-18 Given the following pow function from cmath, complete with
-> precondition and postcondition documentation, determine the
-> information below:
->
-> double pow(double x, double y) // pre: When y has a fractional part, x
-> must be positive.
->
-> // When y is an integer, x may be negative.
->
-> // post: Returns x to the yth power
-
-a.  return type d. class of fi rst argument
-
-b.  function name e. class of second argument
-
-c.  number of arguments f. class of third argument
-
-    19. Write one proper function call to pow.
-
-    20. Is pow(-81.0, 0.5) a valid function call? What is the return
-        > value?
-
-    21. Is pow(-10.0, 2) a valid function call? What is the return
-        > value?
-
-    22. Is pow(2, 5) a valid function call? What is the return value?
-
-    23. Is pow(4.0, 0.5) a valid function call? What is the return
-        > value?
-
-    24. Is pow(5.0) a valid function call? What is the return value?
-
-    25. Write a function heading that returns the fractional component
-        > of the fi rst number divided by the second number. Write
-        > appropriate pre- and postconditions. For example,
-        > remainder(5.0, 2.0) must return 0.5 and remainder(1, 3) must
-        > return 0.3333333.
-
-### 3.3.4 A FEW FUNCTIONS FOR int, char, AND bool
-
-> Some free functions work with the other primitive types. For example,
-> the standard C++ library has free functions that can be used in an
-> end-of-chapter programming project: min, max, and abs.
->
-> \#include <iostream> using namespace std;
->
-> int main() {
->
-> cout << min(5, 7) << endl; cout << min(5.5, 7.7)
-> << endl;
->
-> cout << max(5, 7) << endl; cout << max(5.5, 7.7)
-> << endl; cout << abs(5 - 7) << endl;
->
-> return 0;
->
-> }
->
-> Output
->
-> 5
->
-> 5.5 7
->
-> 7.7
->
-> 2
->
-> Th e min and max functions are defi ned in such a way that the same
-> function name can be used with diff erent types. Th ey can take either
-> two int arguments or two double arguments, but not a mix.
->
-> C++ also has some methods that sound Boolean in nature because of
-> names like islower and isdigit. Other functions seem as though they
-> should have char parameters and return types because they convert
-> characters to their upper or lower case equivalents. Consider the
-> function heading for the free function islower when you
-> \#include<cctype> to have access to its set of functions to
-> classify and transform individual characters.
->
-> int islower(int c);
->
-> Th is function checks whether c is a lowercase letter. It would seem
-> that the parameter should be char and the return type bool like this:
->
-> bool islower(char ch); // This is not the function heading
->
-> However, C++ allows an int to be assigned to a char and vice versa.
-> Arithmetic operations can have a mix of integers and character
-> operands.
->
-> \#include <iostream> using namespace std;
->
-> int main() {
->
-> int anInt = 'A'; // 'A' equals 65 char aChar = 67; // 67 equals 'C'
->
-> cout << "anInt: " << anInt << endl; cout <<
-> "aChar: " << aChar << endl;
->
-> cout << "aChar + anInt: " << (aChar + anInt) <<
-> endl; cout << "anInt % aChar: " << (anInt % aChar - 2)
-> << endl;
->
-> return 0; }
->
-> Output
->
-> anInt: 65 aChar: C aChar + anInt: 132 aChar % anInt: 63
-
-More confusion may occur because C++ considers true to be 1 and false to
-be 0.
-
-> \#include <iostream> using namespace std;
->
-> int main() {
->
-> bool aBool = 1; // C++ allows assignment of int to bool int
-> anotherBool = false; // and a bool literal to an int cout <<
-> aBool << " " << anotherBool << endl;
->
-> return 0; }
->
-> Output
->
-> 1 0
->
-> Th e output shows true prints as 1 and false as 0.
->
-> If you need to classify if a char is an alphabetic letter like “A” or
-> “a”, or a digit such as “9” or “3”, you can use one of the free
-> functions from <cctype>. Th is program shows three more cctype
-> functions:
->
-> \#include <iostream>
->
-> \#include <cctype> // For isalpha isblank isdigit using
-> namespace std;
->
-> int main() { char ch = 'a';
->
-> cout << "isalpha('" << ch << "')? " <<
-> isalpha(ch) << endl; ch = '?';
->
-> cout << "isalpha('" << ch << "')? " <<
-> isalpha(ch) << endl;
->
-> ch = ' ';
->
-> cout << "isblank('" << ch << "')? " <<
-> isblank(ch) << endl; ch = 'N';
->
-> cout << "isblank('" << ch << "')? " <<
-> isblank(ch) << endl;
->
-> ch = 'P'; // Oh, not zero
->
-> cout << "isdigit('" << ch << "')? " <<
-> isdigit(ch) << endl; ch = '5';
->
-> cout << "isdigit('" << ch << "')? " <<
-> isdigit(ch) << endl;
->
-> return 0;
->
-> }
->
-> Output
-
-isalpha('a')? 1 isalpha('?')? 0 isblank(' ')? 1 isblank('N')? 0
-isdigit('P')? 0 isdigit('5')? 1
-
-> Th e toupper and tolower functions convert a character to its
-> lowercase or uppercase equivalent. Because the return type for both is
-> int instead of char, the functions are cast to char with the code
-> (char). Otherwise the output from this program would have been 88 97.
->
-> \#include <iostream>
->
-> \#include <cctype> // For toupper and tolower using namespace
-> std;
->
-> int main() { char lower = 't'; char upper = 'A';
->
-> // (char) makes sure we the character, not the int cout <<
-> (char)toupper(lower) << endl; // Cast required cout <<
-> (char)tolower(upper) << endl; // to see chars
->
-> return 0; }
->
-> Output
->
-> T a
-
-CHAPTER SUMMARY
-
--   You have been confronted with a large variety of details concerning
-    > the C++ programming language, expressions, program development,
-    > function calls, and the types of errors that occur during
-    > program development. Th is can be somewhat overwhelming at fi rst,
-    > especially if you have never programmed before. However, most of
-    > these details are necessary for implementation of even the
-    > simplest program.
-
--   \#include<cmath> provides access to many mathematical and
-    > trigonometric functions. \#include<cctype> provides access
-    > to a set of functions that classify and transform
-    > individual characters.
-
-Exercises
-
--   Functions that have a return type of double can be used wherever a
-    > double (or fl oating-point expression) can be used. Many of the
-    > cmath functions return double.
-
--   Most cmath functions require one numeric argument; pow requires two.
-
--   Preconditions and postconditions represent a contract between the
-    > function and the client code that calls the function. Th is
-    > documentation and other forms of documentation are intended to
-    > help someone understand what the function does.
-
--   Th e function heading itself provides vital usage information such
-    > as the return type, the func-tion name, and the number of
-    > parameters so the programmer knows how many arguments to include
-    > in the call.
-
--   Arguments are associated with parameters by position. It doesn’t
-    > matter what names are used. Th e fi rst argument is associated
-    > with the fi rst parameter, the second argument with the second
-    > parameter, and so on.
-
--   Arguments passed to parameters are like assignment statements. Th e
-    > argument must be com-patible with the parameter (the same type).
-    > Passing a double to an int results in loss of value.
-
-EXERCISES
-
-1.  Write the return result for each function call or explain the error.
-
-  a\. pow(3.0, 2.0)    g\. fabs(-123.4)
-  -------------------- ----------------------
-  b\. pow(-2, 5)       h\. sqrt(-1.0)
-  c\. ceil(1.001)      i\. sqrt(sqrt(16.0))
-  d\. ceil(-1.2)       j\. ceil 1.1
-  e\. pow(16.0, 0.5)   k\. oor()
-  f\. pow(-16.0, 2)    l\. sqrt(0)
-
-1.  Use these initializations to evaluate the expressions that follow:
-
-> double x = 5.0; double y = 7.5;
-
-  a\. sqrt(x - 1.0)       e\. oor(y + 0.5)
-  ----------------------- ------------------
-  b\. ceil(y - 0.5)       f\. pow(x, 3.0)
-  c\. sqrt(y - x + 2.0)   g\. fabs(y - x)
-  d\. pow(10, 2)          h\. pow(10, 3)
-
-1.  What is the value of pow(4, pow(2, 3))?
-
-2.  Write an algorithm that shows the range of a projectile. Th e
-    > formula is
-
-*range* = sin(2 \* *angle*) \* *velocity*^2^ / *gravity*
-
-> where *angle* is the angle of the projectile’s takeoff (in radians),
-> *velocity* is the initial velocity of the projectile (in meters per
-> second), and *gravity* is acceleration due to gravity at 9.8 meters
-> per second.
-
-1.  What happens if the client program does not satisfy the
-    > preconditions of a called function?
-
-2.  What information do postconditions provide?
-
-3.  Which of the following represent valid function headings?
-
-  a\. int large(int a, int b)      d\. int f(a, int b)
-  -------------------------------- ------------------------
-  b\. double(double a, double b)   e\. double f()
-  c\. int f(int a; int b;)         f\. string c(string a)
-
-1.  Name three possible return types from a C++ function (there
-    > are many).
-
-2.  Given the following function heading with pre- and postconditions,
-    > write six function calls (with diff erent arguments) that would
-    > adequately test fmod and would also help explain how fmod works to
-    > someone who has never seen it before.
-
-> double fmod(double x, double y)
->
-> // post: Calculates the oating-point remainder.
->
-> // fmod returns the oating-point remainder of x / y.
->
-> // If the value of y is 0.0, fmod returns Not a Number.
->
-> // Header required: <cmath>
-
-1.  Write the values returned from each of the six function calls in
-    > your answer to the preceding question.
-
-PROGRAMMING TIPS
-
-1.  When calling existing functions, supply the correct number and type
-    > of arguments. Th e function heading and documentation, if present,
-    > provide this information. Count the number of parameters between (
-    > and ). Make sure each associated argument is the same type, or
-    > convertible to that type. An int can be assigned to a oat, a oat
-    > to a double, an int to a long, for example.
-
-2.  Don’t mix arguments types with min and max functions. max(2, 3.0)
-    > and min(1.0, 4) are compile time errors.
-
-3.  Th ree C++ types appear to be the same. C++ allows integer literals
-    > to be treated as character literals and vice versa. Also,
-    > underneath, false is 0 and true is 1. Th e reason there is no
-    > output here is because aChar is storing the non-printable char
-    > value of 1.
-
-Programming Projects
-
-> char aChar = true; // assign 1
->
-> cout << ">" << aChar << "<" << endl; //
-> Output: ><
-
-1.  If you do not have the line using namespace std; you will have to
-    > prepend std:: before every occurrence of the cmath function
-    > you use.
-
-> \#include <iostream> // For cout
->
-> \#include <cmath> // for ceil and oor
->
-> // using namespace std; Without this, prepend with std::
->
-> int main() {
->
-> std::cout << std::ceil(5.99) << std::endl; // 6 std::cout
-> << std:: oor(5.99) << std::endl; // 5 }
-
-**PROGRAMMING PROJECTS**
-
-3A cmath FUNCTIONS
-
-> Write a program that allows the user to enter any number. After an
-> appropriate label, show the return value from each of the following
-> functions (assume x represents the number input by the user):
-
-1.  the square root of x
-
-2.  x to the 2.5 power
-
-3.  the ceiling of x
-
-4.  the fl oor of x
-
-5.  the absolute value of x
-
-> Your dialogue should look like this:
->
-> Enter a number for x: ***2.5*** sqrt(x) : 1.5814 pow(x, 2.5) : 6.25
-> ceil(x) : 3 oor(x) : 2 fabs(x) : 2.5
-
-3B CIRCLE
-
-> Write a C++ program that inputs a value for the radius of a circle (r)
-> from the keyboard and then outputs the diameter, circumference, and
-> area of the circle. Use the pow function to compute the area.
-
--   *diameter* = 2 \* *radius*
-
--   *circumference* = *pi* \* *diameter*
-
--   *area* = *pi* \* *radius* ^2^
-
-> Initialize PI as a constant object with the value of 3.14159. Your
-> dialogue should look like this (*Note:* Output of fl oating-point
-> numbers varies among C++ compilers, so your output might be slightly
-> diff erent—especially in the number of decimal places shown for
-> Circumference and Area):
->
-> Enter Radius: ***1.0***
->
-> Diameter: 2.0
->
-> Circumference: 6.28318
->
-> Area: 3.14159
->
-> Run your program with radius = 1.0. Verify that your values for
-> circumference and area match the preceding dialogue. After this, run
-> your program with the input radii of 2.0 and 2.5 and verify that the
-> output is what you expect.
-
-3C MORE ROUNDING
-
-> Write a program that asks the user for a number and displays that
-> number rounded to zero, one, two, and three decimal places. Your
-> dialogue should look like this:
->
-> Enter the number to round: ***3.4567***
->
-> 3.4567 rounded to 0 decimals = 3
->
-> 3.4567 rounded to 1 decimal = 3.5
->
-> 3.4567 rounded to 2 decimals = 3.46
->
-> 3.4567 rounded to 3 decimals = 3.457
-
-3D RANGE
-
-> Write a program that determines the *range* of a projectile using this
-> formula: *range* = sin(2 \* *angle*) \* *velocity*^2^ / *gravity*
->
-> where *angle* is the angle of the projectile’s path (in radians),
-> *velocity* is the initial velocity of the projectile (in meters per
-> second), and *gravity* is acceleration at 9.8 meters per second (a
-> constant). Th e takeoff angle must be input in degrees. Th erefore you
-> must convert this angle to its radian equivalent. Th is is necessary
-> because the trigonometric function sin(x) assumes the argument (x) is
-> an angle expressed in radians. An angle in degrees can be converted to
-> radians by multiplying the number of degrees by π/180 where π ≈
-> 3.14159. For example, 45° = 45 \* 3.14159/180, or 0.7853975 radians.
-> Th e velocity is presumed to be input in meters per second. Make your
-> interactive dialogue look like this:
->
-> Takeoff angle (in degrees)? ***45.0***
->
-> Initial velocity (meters per second)? 100.0
->
-> Range = 1020.41 meters
-
-Programming Projects
-
-3E TIME TRAVEL
-
-> For astronauts approaching the speed of light in a spaceship, time
-> passes more slowly. Also, the weight of their spaceship increases. Th
-> e Lorentz factor indicates this change in time and weight depends on
-> the spaceship velocity v
->
-> 1 *factor* =
->
-> where *v* is velocity and *c* is the speed of light (299,792,458
-> meters/second). Th e *factor* can be used to compute how much
-> perceived time is decreased for the astronauts and by how much the
-> weight of their spaceship is increased. For example, at 74948114.5
-> meters per second (1/4 the speed of light) the factor is 1.038. Time’s
-> passage is reduced by the factor and the weight is increased by that
-> factor.
->
-> Write a program that reads the weight of the spaceship on earth
-> (90,000 kilograms), the fraction of the speed of light (0.25, less
-> than 1.0), and the distance to travel in light years (Alpha Centauri
-> is about 4.35 light years away).
+接下来，`twoParameters`函数中发生的一切操作都要依赖于这两个形参的值，毕竟该函数是利用形参来产生返回结果的。
+
+**自检题**
+
+3-16 在`twoParameters("1st", 1.2)`这个调用中传递给`str`形参的值是什么？
+
+3-17 在`twoParameters("2nd", 3.4)`这个调用中传递给`x`形参的值是什么？
+
+如你所见，当函数的前置条件与后置条件都被满足时，我们就可以从函数头信息中推导出如此多的内容。我们可以再来复习一下，下面是`sin`函数的完整头信息以及它的前置条件与后置条件：
+
+```C++
+double sin(double x) // post: Returns the sine of x radians
+```
+
+同样地，我们可以从中得到如下信息：
+
+* 函数会做的事：             返回角度`x`的正弦值
+* 函数返回值类型：           `double`
+* 函数的名称：              `sin`
+* 函数参数的数量：           一个
+* 函数参数的类型：           `double`（或其他可被转换成`double`类型的表达式）
+
+接下来，我们可以来确定返回结果了（这里可以借助科学计算器的角度模式）。
+
+| 函数调用              | 函数返回结果                     |
+|----------------------|--------------------------------|
+| `sin(3.1415926/2.0)` | `1.0`                          |
+| `sin(1.0)`           | `0.8421 // Approximately`      |
+| `sin(3.1415926)`     | `5.35898e-08 // close to 0.0`  |
+
+**自检题**
+
+3-18 请根据下面`pow`函数（来自`cmath`程序库）的完整头信息及其前置条件与后置条件，确认以下事项的信息：
+
+```C++
+double pow(double x, double y)
+// pre: When y has a fractional part, x must be positive.
+//      When y is an integer, x may be negative.
+// post: Returns x to the yth power
+```
+
+* a. 函数的返回值类型
+* b. 函数的名称
+* c. 函数参数的数量
+* d. 第一个参数的类型
+* e. 第二个参数的类型
+* f. 第三个参数的类型
+
+3-19. 请写出一个针对`pow`函数的正确调用。
+
+3-20. `pow(-81.0, 0.5)`是一个有效的函数调用吗？它的返回值是什么？
+
+3-21. `pow(-10.0, 2)`是一个有效的函数调用吗？它的返回值是什么？
+
+3-22. `pow(2, 5)`是一个有效的函数调用吗？它的返回值是什么？
+
+3-23. `pow(4.0, 0.5)`是一个有效的函数调用吗？它的返回值是什么？
+
+3-24. `pow(5.0)`是一个有效的函数调用吗？它的返回值是什么？
+
+3-25. 请为一个用第一个数去除以第二个数，并返回其结果的函数编写相应的函数头信息，并为其编写相应的前置条件与后置条件。例如，  在执行`remainder(5.0, 2.0)`这个调用时它得返回0.5、而当执行`remainder(1, 3)`时则返回0.3333333。
+
+### 3.3.4 面向`int`、`char`和`bool`这些类型的一些函数
+
+也有一些自由函数是作用于其他基本类型的。例如，本章末尾的编程项目中会用到的一些C++标准库中的只有函数：`min`、`max`和`abs`。
+
+```C++
+#include <iostream>
+using namespace std;
+
+int main() {
+    cout << min(5, 7)     << endl;
+    cout << min(5.5, 7.7) << endl;
+
+    cout << max(5, 7)     << endl;
+    cout << max(5.5, 7.7) << endl;
+
+    cout << abs(5 - 7)    << endl;
+
+    return 0;
+}
+```
+
+**程序输出**
+
+```shell
+5
+5.5 7
+7.7
+2
+```
+
+The min and max functions are defined in such a way that the same function name can be used with diff erent types. They can take either two int arguments or two double arguments, but not a mix.
+
+C++ also has some methods that sound Boolean in nature because of names like islower and isdigit. Other functions seem as though they should have char parameters and return types because they convert characters to their upper or lower case equivalents. Consider the function heading for the free function islower when you \#include <cctype> to have access to its set of functions to classify and transform individual characters.
+
+```C++
+int islower(int c);
+```
+
+This function checks whether c is a lowercase letter. It would seem that the parameter should be char and the return type bool like this:
+
+```C++
+bool islower(char ch); // This is not the function heading
+```
+
+However, C++ allows an int to be assigned to a char and vice versa. Arithmetic operations can have a mix of integers and character operands.
+
+```C++
+#include <iostream>
+using namespace std;
+
+int main() {
+    int anInt = 'A'; // 'A' equals 65
+    char aChar = 67; // 67 equals 'C'
+
+    cout << "anInt: " << anInt << endl;
+    cout << "aChar: " << aChar << endl;
+    cout << "aChar + anInt: " << (aChar + anInt) << endl;
+    cout << "anInt % aChar: " << (anInt % aChar - 2) << endl;
+
+    return 0;
+}
+```
+
+**程序输出**
+
+```shell
+anInt: 65
+aChar: C
+aChar + anInt: 132
+aChar % anInt: 63
+```
+
+More confusion may occur because C++ considers true to be 1 and false to be 0.
+
+```C++
+#include <iostream>
+using namespace std;
+
+int main() {
+    bool aBool = 1; // C++ allows assignment of int to bool
+    int anotherBool = false; // and a bool literal to an int
+
+    cout << aBool << " " << anotherBool << endl;
+
+    return 0;
+}
+```
+
+**程序输出**
+
+```shell
+1 0
+```
+
+The output shows true prints as 1 and false as 0.
+
+If you need to classify if a char is an alphabetic letter like “A” or “a”, or a digit such as “9” or “3”, you can use one of the free functions from <cctype>. Th is program shows three more cctype functions:
+
+```C++
+#include <iostream>
+#include <cctype> // For isalpha isblank isdigit
+using namespace std;
+
+int main() {
+    char ch = 'a';
+    cout << "isalpha('" << ch << "')? " << isalpha(ch) << endl;
+    ch = '?';
+    cout << "isalpha('" << ch << "')? " << isalpha(ch) << endl;
+
+    ch = ' ';
+    cout << "isblank('" << ch << "')? " << isblank(ch) << endl;
+    ch = 'N';
+    cout << "isblank('" << ch << "')? " << isblank(ch) << endl;
+
+    ch = 'P'; // Oh, not zero
+    cout << "isdigit('" << ch << "')? " << isdigit(ch) << endl; ch = '5';
+    cout << "isdigit('" << ch << "')? " << isdigit(ch) << endl;
+
+    return 0;
+}
+```
+
+**程序输出**
+
+```shell
+isalpha('a')? 1
+isalpha('?')? 0
+isblank(' ')? 1
+isblank('N')? 0
+isdigit('P')? 0
+isdigit('5')? 1
+```
+
+The toupper and tolower functions convert a character to its lowercase or uppercase equivalent. Because the return type for both is int instead of char, the functions are cast to char with the code(char). Otherwise the output from this program would have been 88 97.
+
+```C++
+#include <iostream>
+#include <cctype> // For toupper and tolower
+using namespace std;
+
+int main() {
+    char lower = 't';
+    char upper = 'A';
+
+    // (char) makes sure we the character, not the int
+    cout << (char)toupper(lower) << endl; // Cast required
+    cout << (char)tolower(upper) << endl; // to see chars
+
+    return 0;
+}
+```
+
+**程序输出**
+
+```shell
+T
+a
+```
+
+## CHAPTER SUMMARY
+
+* You have been confronted with a large variety of details concerning the C++ programming language, expressions, program development, function calls, and the types of errors that occur during program development. Th is can be somewhat overwhelming at first, especially if you have never programmed before. However, most of these details are necessary for implementation of even the simplest program.
+* #include<cmath> provides access to many mathematical and trigonometric functions. \#include<cctype> provides access to a set of functions that classify and transform individual characters.
+* Functions that have a return type of double can be used wherever a double (or fl oating-point expression) can be used. Many of the cmath functions return double.
+* Most cmath functions require one numeric argument; pow requires two.
+* Preconditions and postconditions represent a contract between the function and the client code that calls the function. This documentation and other forms of documentation are intended to help someone understand what the function does.
+* The function heading itself provides vital usage information such as the return type, the func-tion name, and the number of parameters so the programmer knows how many arguments to include in the call.
+* Arguments are associated with parameters by position. It doesn’t matter what names are used. The first argument is associated with the fi rst parameter, the second argument with the second parameter, and so on.
+* Arguments passed to parameters are like assignment statements. The argument must be com-patible with the parameter (the same type). Passing a double to an int results in loss of value.
+
+## EXERCISES
+
+1. Write the return result for each function call or explain the error.
+    * a. pow(3.0, 2.0)
+    * b. pow(-2, 5)
+    * c. ceil(1.001)
+    * d. ceil(-1.2)
+    * e. pow(16.0, 0.5)
+    * f. pow(-16.0, 2)
+    * g. fabs(-123.4)
+    * h. sqrt(-1.0)
+    * i. sqrt(sqrt(16.0))
+    * j. ceil 1.1
+    * k. floor()
+    * l. sqrt(0)
+2. Use these initializations to evaluate the expressions that follow:
+    ```C++
+    double x = 5.0; double y = 7.5;
+    ```
+    * a. sqrt(x - 1.0)
+    * b. ceil(y - 0.5)
+    * c. sqrt(y - x + 2.0)
+    * d. pow(10, 2)
+    * e. oor(y + 0.5)
+    * f. pow(x, 3.0)
+    * g. fabs(y - x)
+    * h. pow(10, 3)
+3. What is the value of pow(4, pow(2, 3))?
+4. Write an algorithm that shows the range of a projectile. The formula is 
+
+    $$range = sin(2 * angle) * velocity^2 / gravity$$
+where *angle* is the angle of the projectile’s takeoff (in radians), *velocity* is the initial velocity of the projectile (in meters per second), and *gravity* is acceleration due to gravity at 9.8 meters per second.
+
+5. What happens if the client program does not satisfy the preconditions of a called function?
+6. What information do postconditions provide?
+7. Which of the following represent valid function headings?
+    * a. int large(int a, int b)
+    * b. double(double a, double b)
+    * c. int f(int a; int b;)
+    * d. int f(a, int b)
+    * e. double f()
+    * f. string c(string a)
+8. Name three possible return types from a C++ function (there are many).
+9. Given the following function heading with pre- and postconditions, write six function calls (with different arguments) that would adequately test fmod and would also help explain how fmod works to someone who has never seen it before.
+    ```C++
+    double fmod(double x, double y)
+    // post: Calculates the oating-point remainder.
+    //       fmod returns the oating-point remainder of x / y.
+    //       If the value of y is 0.0, fmod returns Not a Number.
+    // Header required: <cmath>
+    ```
+10. Write the values returned from each of the six function calls in your answer to the preceding question.
+
+## PROGRAMMING TIPS
+
+1. When calling existing functions, supply the correct number and type of arguments. Th e function heading and documentation, if present, provide this information. Count the number of parameters between ( and ). Make sure each associated argument is the same type, or convertible to that type. An int can be assigned to a oat, a oat to a double, an int to a long, for example.
+2. Don’t mix arguments types with min and max functions. max(2, 3.0) and min(1.0, 4) are compile time errors.
+3. Three C++ types appear to be the same. C++ allows integer literals to be treated as character literals and vice versa. Also, underneath, false is 0 and true is 1. Th e reason there is no output here is because aChar is storing the non-printable char value of 1.
+    ```C++
+    char aChar = true; // assign 1
+    cout << ">" << aChar << "<" << endl; // Output: ><
+    ```
+4. If you do not have the line using namespace std; you will have to prepend std:: before every occurrence of the cmath function you use.
+    ```C++
+    #include <iostream> // For cout
+    #include <cmath> // for ceil and oor
+    // using namespace std; Without this, prepend with std::
+
+    int main() {
+        std::cout << std::ceil(5.99) << std::endl; // 6
+        std::cout << std:: oor(5.99) << std::endl; // 5
+    }
+    ```
+
+## PROGRAMMING PROJECTS
+
+### 3A cmath FUNCTIONS
+
+Write a program that allows the user to enter any number. After an appropriate label, show the return value from each of the following functions (assume x represents the number input by the user):
+
+1. the square root of x
+2. x to the 2.5 power
+3. the ceiling of x
+4. the floor of x
+5. the absolute value of x
+
+Your dialogue should look like this:
+
+```shell
+Enter a number for x: ***2.5***
+sqrt(x) : 1.5814
+pow(x, 2.5) : 6.25
+ceil(x) : 3 oor(x) : 2
+fabs(x) : 2.5
+```
+
+### 3B CIRCLE
+
+Write a C++ program that inputs a value for the radius of a circle (r) from the keyboard and then outputs the diameter, circumference, and area of the circle. Use the pow function to compute the area.
+
+* *diameter* = 2 \* *radius*
+* *circumference* = *pi* \* *diameter*
+* *area* = *pi* \* *radius* ^2^
+
+Initialize PI as a constant object with the value of 3.14159. Your dialogue should look like this (*Note:* Output of fl oating-point numbers varies among C++ compilers, so your output might be slightly diff erent—especially in the number of decimal places shown for Circumference and Area):
+
+```shell
+Enter Radius: ***1.0***
+Diameter: 2.0
+Circumference: 6.28318
+Area: 3.14159
+```
+
+Run your program with radius = 1.0. Verify that your values for circumference and area match the preceding dialogue. After this, run your program with the input radii of 2.0 and 2.5 and verify that the output is what you expect.
+
+### 3C MORE ROUNDING
+
+Write a program that asks the user for a number and displays that number rounded to zero, one, two, and three decimal places. Your dialogue should look like this:
+
+```shell
+Enter the number to round: ***3.4567***
+3.4567 rounded to 0 decimals = 3
+3.4567 rounded to 1 decimal = 3.5
+3.4567 rounded to 2 decimals = 3.46
+3.4567 rounded to 3 decimals = 3.457
+```
+
+### 3D RANGE
+
+Write a program that determines the *range* of a projectile using this
+
+$$formula: range = sin(2 * angle) * velocity^2 / gravity$$
+
+where *angle* is the angle of the projectile’s path (in radians), *velocity* is the initial velocity of the projectile (in meters per second), and *gravity* is acceleration at 9.8 meters per second (a constant). Th e takeoff angle must be input in degrees. Th erefore you must convert this angle to its radian equivalent. Th is is necessary because the trigonometric function sin(x) assumes the argument (x) is an angle expressed in radians. An angle in degrees can be converted to radians by multiplying the number of degrees by π/180 where π ≈ 3.14159. For example, 45° = 45 \* 3.14159/180, or 0.7853975 radians. Th e velocity is presumed to be input in meters per second. Make your interactive dialogue look like this:
+
+```shell
+Takeoff angle (in degrees)? ***45.0***
+Initial velocity (meters per second)? 100.0
+
+Range = 1020.41 meters
+```
+
+### 3E TIME TRAVEL
+
+For astronauts approaching the speed of light in a spaceship, time passes more slowly. Also, the weight of their spaceship increases. The Lorentz factor indicates this change in time and weight depends on the spaceship velocity v
+
+$$factor = \frac{1}{\sqrt{1-\frac{u^2}{c^2}}}$$
+
+where *v* is velocity and *c* is the speed of light (299,792,458 meters/second). Th e *factor* can be used to compute how much perceived time is decreased for the astronauts and by how much the weight of their spaceship is increased. For example, at 74948114.5 meters per second (1/4 the speed of light) the factor is 1.038. Time’s passage is reduced by the factor and the weight is increased by that factor.
+
+Write a program that reads the weight of the spaceship on earth(90,000 kilograms), the fraction of the speed of light (0.25, less than 1.0), and the distance to travel in light years (Alpha Centauri is about 4.35 light years away).
 
 **Dialog 1:**
 
-> Weight of spaceship on earth in kilograms? ***90000***
->
-> Velocity as a fraction of the speed of light 0.0 to 1.0? ***0.25***
->
-> Distance to travel in light years? ***4.35***
->
-> Travel time: 4.35 light years
->
-> Perceived time: 4.21187 years
->
-> Earth weight of spaceship: 90000 kg
+```shell
+Weight of spaceship on earth in kilograms? ***90000***
+Velocity as a fraction of the speed of light 0.0 to 1.0? ***0.25***
+Distance to travel in light years? ***4.35***
 
-Weight of spaceship: 92951.6 kg traveling at 7.49481e+07 m/s **Dialog
-2:**
+                Travel time: 4.35 light years
+             Perceived time: 4.21187 years
+  Earth weight of spaceship: 90000 kg
+        Weight of spaceship: 92951.6 kg traveling at 7.49481e+07 m/s
+```
 
-> Weight of spaceship on earth in kilograms? ***90000***
->
-> Velocity as a fraction of the speed of light 0.0 to 1.0? ***0.9***
->
-> Distance to travel in light years? ***4.35***
->
-> Travel time: 4.35 light years
->
-> Perceived time: 1.89612 years
->
-> Earth weight of spaceship: 90000 kg
->
-> Weight of spaceship: 206474 kg tra veling at 2.69813e+08 m/s
+**Dialog 2:**
 
+```shell
+Weight of spaceship on earth in kilograms? ***90000***
+Velocity as a fraction of the speed of light 0.0 to 1.0? ***0.9***
+Distance to travel in light years? ***4.35***
+
+                Travel time: 4.35 light years
+             Perceived time: 1.89612 years
+  Earth weight of spaceship: 90000 kg
+        Weight of spaceship: 206474 kg tra veling at 2.69813e+08 m/s
+```
